[package]
name = "darp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
dirs = "5.0"

[dependencies.ctrlc]
version = "3.4"
features = ["termination"]

[features]
default = []
