[package]
name = "darp"
version = "1.1.0"
edition = "2024"
rust-version = "1.87"
description = "Directories auto-reverse proxied — turn local project folders into .test domains with Docker/Podman"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcodetype/darp-rust"
homepage = "https://github.com/arcodetype/darp-rust"
keywords = ["docker", "development", "reverse-proxy", "local-development", "podman"]
categories = ["command-line-utilities", "development-tools"]
readme = "readme.md"
exclude = ["dockerfiles/", ".github/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
dirs = "5.0"

[dependencies.ctrlc]
version = "3.4"
features = ["termination"]

[dev-dependencies]
tempfile = "3"

[features]
default = []
